--- a/src/styles/registro.module.css
+++ b/src/styles/registro.module.css
@@ -1,10 +1,20 @@
-/* General Styles */
-.container {
+* {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+  font-family: Arial, sans-serif;
+}
+
+body {
   display: flex;
   justify-content: center;
   align-items: center;
   height: 100vh;
   background-color: #f0f4f8;
+}
+
+.container {
+  display: flex;
   width: 900px;
   background-color: white;
   border-radius: 10px;
@@ -12,7 +22,6 @@
   box-shadow: 0px 4px 20px rgba(0, 0, 0, 0.1);
 }
 
-/* Left Side */
 .left-side {
   width: 50%;
   background-color: #2ed9c3;
@@ -26,20 +35,43 @@
   width: 250px;
   height: 350px;
   background-color: #ffa944;
-  border-radius: 50%;
+  border-radius: 70%;
   display: flex;
+  justify-content: center;
+  align-items: center;
+  position: absolute;
+  top: 50%;
+  transform: translateY(-50%) rotate(-30deg);
+
+
+}
+
+.image-container img {
+  width: 300%;
+  height: 65%;
+  transform: rotate(0deg); /* Rotación de 10 grados */
+  border-radius: 50%;
+}
+.logo281 {
+
+  width: 160px;
+  height: 160px;
+  background-color: #0009;
+  border-radius: 70%;
+  display: flex;
+  box-sizing: border-box;
   justify-content: center;
   align-items: center;
   position: absolute;
   top: 50%;
   transform: translateY(-50%);
 }
+.logo281 img{
+  width: 100%;
+  height: 100%;
 
-.image {
-  border-radius: 50%;
 }
 
-/* Right Side */
 .right-side {
   width: 50%;
   padding: 50px;
@@ -49,23 +81,23 @@
   justify-content: center;
 }
 
-.h1 {
+h1 {
   font-size: 24px;
   margin-bottom: 20px;
 }
 
-.form {
+form {
   display: flex;
   flex-direction: column;
 }
 
-.label {
+label {
   margin-bottom: 5px;
   font-size: 14px;
   color: #333333;
 }
 
-.input {
+input {
   padding: 10px;
   margin-bottom: 20px;
   border: 1px solid #cccccc;
@@ -87,17 +119,17 @@
   background-color: #ff8a00;
 }
 
-.text {
+p {
   font-size: 14px;
   color: #333333;
 }
 
-.link {
+a {
   color: #ffa944;
   text-decoration: none;
 }
 
-.link:hover {
+a:hover {
   text-decoration: underline;
 }
 
@@ -118,18 +150,14 @@
   cursor: pointer;
 }
 
-.google-icon {
+.google-btn img {
   width: 20px;
   margin-right: 10px;
 }
 
-/* Footer */
-.footer {
+footer {
   text-align: center;
   padding: 10px;
-}
-
-.footer-text {
   font-size: 12px;
   color: #888888;
 }
