--- a/src/styles/hero.module.css
+++ b/src/styles/hero.module.css
@@ -1,9 +1,9 @@
 .animatedBackground {
   --s: 25vmin;
   --p: calc(var(--s) / 2);
-  --c1: var(--secondary-orange-color);
-  --c2: var(--strong-tourquise-color);
-  --c3: var(--main-white-color);
+  --c1: #ffbe6994;
+  --c2: #2ec4b58c;
+  --c3: #ffffff67;
   --bg: var(--c3);
   --d: 6000ms;
   --e: cubic-bezier(0.76, 0, 0.24, 1);
